modified html styles sheets

--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,26 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+      <link rel="stylesheet" href="https://cdn.rawgit.com/benwiley4000/react-gif-player/9c4c63b77dd3b20660c99ae4ff51a44a52c6ff2a/gifplayer.css">
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+      <!-- Firebase -->
+      <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
 
+      <!-- ReactFire -->
+      <script src="https://cdn.firebase.com/libs/reactfire/1.0.0/reactfire.min.js"></script>
+      <!-- Style sheet for gifplayer-->
+
+
+      <!--cdn for gifplayer-->
+      <script src="https://cdn.rawgit.com/benwiley4000/react-gif-player/9c4c63b77dd3b20660c99ae4ff51a44a52c6ff2a/gifplayer.js"></script>
 
     <title>React App</title>
   </head>
   <body>
     <div id="root"></div>
+    <div id="gifP"></div>
 
   </body>
 </html>
