--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+      <script
+              src="https://code.jquery.com/jquery-3.2.1.min.js"
+              integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+              crossorigin="anonymous"></script>
       <link rel="stylesheet" href="https://cdn.rawgit.com/benwiley4000/react-gif-player/9c4c63b77dd3b20660c99ae4ff51a44a52c6ff2a/gifplayer.css">
 
     <!-- Latest compiled and minified CSS -->
