--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
       <!-- Jquery cdn-->
-      <script
-              src="https://code.jquery.com/jquery-3.2.1.min.js"
-              integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-              crossorigin="anonymous"></script>
       <link rel="stylesheet" href="https://cdn.rawgit.com/benwiley4000/react-gif-player/9c4c63b77dd3b20660c99ae4ff51a44a52c6ff2a/gifplayer.css">
 
     <!-- Latest compiled and minified bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 
-      <!-- Firebase -->
+    <!-- Firebase -->
       <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
 
       <!-- ReactFire -->
