--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,14 @@
 
 
       <!--cdn for gifplayer-->
+
       <script src="https://cdn.rawgit.com/benwiley4000/react-gif-player/9c4c63b77dd3b20660c99ae4ff51a44a52c6ff2a/gifplayer.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/3.7.5/firebase.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase-app.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase-auth.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/3.7.4/firebase-database.js"></script>
+
+
 
     <title>React App</title>
   </head>
